Cryptomatte: EXR sequence does not update when scrubbing the timeline #88666

Closed
opened 2021-05-29 10:50:57 +02:00 by Karim Joseph · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.31

Blender Version
Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-05-28 16:16, hash: c369382977

Short description of error
When scrubbing the timeline, the new cryptomatte node EXR sequence does not update.
This can be seen both when using a matte ID, or by previewing the cryptomatte pick output with the viewer node.

bugcrypto.mp4

Exact steps for others to reproduce the error
Attached Blend file and file sequences for your consideration:
cryptomatte bug report.zip

thank you for your time

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.31 **Blender Version** Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-05-28 16:16, hash: `c369382977` **Short description of error** When scrubbing the timeline, the new cryptomatte node EXR sequence does not update. This can be seen both when using a matte ID, or by previewing the cryptomatte pick output with the viewer node. [bugcrypto.mp4](https://archive.blender.org/developer/F10148122/bugcrypto.mp4) **Exact steps for others to reproduce the error** Attached Blend file and file sequences for your consideration: [cryptomatte bug report.zip](https://archive.blender.org/developer/F10147983/cryptomatte_bug_report.zip) thank you for your time

Added subscriber: @KarimJoseph

Added subscriber: @KarimJoseph

More information if useful:
The same EXR sequence with the same settings does update when using the image node, but not with the new cryptomatte node.
Tested in todays build, version: 2.93.0 Beta, branch: master, commit date: 2021-05-29 13:29, hash: 3c02e648f3

bugcrypto2.mp4

More information if useful: The same EXR sequence with the same settings does update when using the image node, but not with the new cryptomatte node. Tested in todays build, version: 2.93.0 Beta, branch: master, commit date: 2021-05-29 13:29, hash: `3c02e648f3` [bugcrypto2.mp4](https://archive.blender.org/developer/F10148971/bugcrypto2.mp4)
Jeroen Bakker self-assigned this 2021-05-31 08:15:26 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 5a612097ab

This issue was referenced by 5a612097abb4438ab357ae29e5d6f1916d136d69

This issue was referenced by e0a1c3da46

This issue was referenced by e0a1c3da46ada31058471a0c40bcc8fd56929846

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88666
There is no content yet.